Remove Post-Starter Points header, make column headers smaller, ensure alignment

--- a/src/ui-react/ScoredPossibleKeepDiscard.module.css
+++ b/src/ui-react/ScoredPossibleKeepDiscard.module.css
@@ -19,6 +19,7 @@
 
 .points-column {
   text-align: right;
+  white-space: nowrap;
 }
 
 @media (orientation: landscape) {
