--- a/src/ui-react/vars.css
+++ b/src/ui-react/vars.css
@@ -6,6 +6,8 @@
   --clickable-border-radius: 0.12em;
   --card-border: 0.025em solid #c0c0c0;
   --card-background-color: white;
+  --extra-small-text-font-size-landscape: 1.8vw;
+  --extra-small-text-font-size-portrait: 4.5vw;
   --small-text-font-size-landscape: 2.3vw;
   --small-text-font-size-portrait: 5.8vw;
   --medium-text-font-size-landscape: 2.3vw;
